--- a/.env_example
+++ b/.env_example
@@ -70,3 +70,12 @@ INFLUXDB_ADMIN_PASSWORD=password
 GRAFANA_PORT=3000
 GF_SECURITY_ADMIN_PASSWORD=password
 
+#Airflow
+EC2_USER = ubuntu
+EC2_IP = 
+RDS_HOST = 
+RDS_PORT = 
+RDS_DB_NAME = 
+RDS_USER = 
+RDS_PASSWORD = 
+AIRFLOW_HOME = ~/airflow
