--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "prometheus_client==0.21.0",
     "fastapi==0.115.2",
     "uvicorn==0.31.1",
-    "apache-airflow[mlflow]",
+    "apache-airflow[mlflow]==2.10.0",
+    "apache-airflow[postgres]==2.10.0",
     "influxdb==5.3.2",
     "docker==7.1.0",
     "kubernetes==31.0.0"
